{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 179,
  "lineage": "d49c3328-0efc-e5df-eb00-9b02444e3775",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725625542800:vpc/vpc-0831055345b75f5d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-032e4551378765583",
            "default_route_table_id": "rtb-06a9cfa8d75f2ec4e",
            "default_security_group_id": "sg-0ed91487e0e2ccd52",
            "dhcp_options_id": "dopt-079153d9273d7fb4e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0831055345b75f5d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06a9cfa8d75f2ec4e",
            "owner_id": "725625542800"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:725625542800:loadbalancer/elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c",
              "us-east-1d",
              "us-east-1e",
              "us-east-1f"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "elb-1125133799.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 60,
            "instances": [
              "i-03c164167a49a7c3c",
              "i-0744da6430bcf5ea3",
              "i-0793b44674c0f199a",
              "i-0849aa632cae8aebf",
              "i-088eca2b844b2bce4",
              "i-0b3b4bd1a9d61f6b1"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-05a9b9d224d9e63e0"
            ],
            "source_security_group": "725625542800/elb_sg",
            "source_security_group_id": "sg-05a9b9d224d9e63e0",
            "subnets": [
              "subnet-0565c72c8be2a4a50",
              "subnet-087005b0103a2f0e5",
              "subnet-0993ca89727152b5f",
              "subnet-0caae72f8762e71fd",
              "subnet-0dc83f0a90e6341d2",
              "subnet-0e0be61b12e125be5"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.http_servers",
            "aws_security_group.elb_sg",
            "aws_security_group.http_server_sg",
            "data.aws_subnets.default_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:725625542800:instance/i-0593a94302f4c7c4b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0593a94302f4c7c4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e3dfaec197f21972",
            "private_dns": "ip-172-31-69-124.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.69.124",
            "public_dns": "ec2-3-239-81-147.compute-1.amazonaws.com",
            "public_ip": "3.239.81.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02b721f279cd81174",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "db_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0caae72f8762e71fd",
            "tags": {
              "name": "db_servers_subnet-0caae72f8762e71fd"
            },
            "tags_all": {
              "name": "db_servers_subnet-0caae72f8762e71fd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f27fa81a306ae600"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.db_server_sg",
            "data.aws_subnets.default_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0565c72c8be2a4a50",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:725625542800:instance/i-0849aa632cae8aebf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0849aa632cae8aebf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0902750bb285c7f9d",
            "private_dns": "ip-172-31-93-188.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.93.188",
            "public_dns": "ec2-3-92-190-18.compute-1.amazonaws.com",
            "public_ip": "3.92.190.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-010e2afd4df2183f8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0565c72c8be2a4a50",
            "tags": {
              "name": "http_servers_subnet-0565c72c8be2a4a50"
            },
            "tags_all": {
              "name": "http_servers_subnet-0565c72c8be2a4a50"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0324bf7bf68335bc5"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-087005b0103a2f0e5",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:725625542800:instance/i-0b3b4bd1a9d61f6b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3b4bd1a9d61f6b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0438a651ab996d3b6",
            "private_dns": "ip-172-31-27-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.207",
            "public_dns": "ec2-54-88-173-91.compute-1.amazonaws.com",
            "public_ip": "54.88.173.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03b3f37060123b5d1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087005b0103a2f0e5",
            "tags": {
              "name": "http_servers_subnet-087005b0103a2f0e5"
            },
            "tags_all": {
              "name": "http_servers_subnet-087005b0103a2f0e5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0324bf7bf68335bc5"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-0993ca89727152b5f",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:725625542800:instance/i-088eca2b844b2bce4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088eca2b844b2bce4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-056289a5edb0ff95f",
            "private_dns": "ip-172-31-57-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.57.103",
            "public_dns": "ec2-54-162-101-243.compute-1.amazonaws.com",
            "public_ip": "54.162.101.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b9e65d74a0743002",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0993ca89727152b5f",
            "tags": {
              "name": "http_servers_subnet-0993ca89727152b5f"
            },
            "tags_all": {
              "name": "http_servers_subnet-0993ca89727152b5f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0324bf7bf68335bc5"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-0caae72f8762e71fd",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:725625542800:instance/i-03c164167a49a7c3c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c164167a49a7c3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-074be03edd1924232",
            "private_dns": "ip-172-31-71-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.71.144",
            "public_dns": "ec2-44-200-29-90.compute-1.amazonaws.com",
            "public_ip": "44.200.29.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-087ee6b161155053b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0caae72f8762e71fd",
            "tags": {
              "name": "http_servers_subnet-0caae72f8762e71fd"
            },
            "tags_all": {
              "name": "http_servers_subnet-0caae72f8762e71fd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0324bf7bf68335bc5"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-0dc83f0a90e6341d2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:725625542800:instance/i-0793b44674c0f199a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0793b44674c0f199a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f77b48dd5019031c",
            "private_dns": "ip-172-31-39-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.39.54",
            "public_dns": "ec2-13-218-191-220.compute-1.amazonaws.com",
            "public_ip": "13.218.191.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08295198329fd67d0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dc83f0a90e6341d2",
            "tags": {
              "name": "http_servers_subnet-0dc83f0a90e6341d2"
            },
            "tags_all": {
              "name": "http_servers_subnet-0dc83f0a90e6341d2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0324bf7bf68335bc5"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_subnets.default_subnets"
          ]
        },
        {
          "index_key": "subnet-0e0be61b12e125be5",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f88e80871fd81e91",
            "arn": "arn:aws:ec2:us-east-1:725625542800:instance/i-0744da6430bcf5ea3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0744da6430bcf5ea3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default-ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05ceb87350a7c4ab3",
            "private_dns": "ip-172-31-3-141.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.141",
            "public_dns": "ec2-3-239-60-74.compute-1.amazonaws.com",
            "public_ip": "3.239.60.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fc6ecf677c59396f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "http_server_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0be61b12e125be5",
            "tags": {
              "name": "http_servers_subnet-0e0be61b12e125be5"
            },
            "tags_all": {
              "name": "http_servers_subnet-0e0be61b12e125be5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0324bf7bf68335bc5"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg",
            "data.aws_subnets.default_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725625542800:security-group/sg-0f27fa81a306ae600",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f27fa81a306ae600",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db_server_sg",
            "name_prefix": "",
            "owner_id": "725625542800",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "http_server_sg"
            },
            "tags_all": {
              "name": "http_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0831055345b75f5d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725625542800:security-group/sg-05a9b9d224d9e63e0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a9b9d224d9e63e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "725625542800",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0831055345b75f5d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:725625542800:security-group/sg-0324bf7bf68335bc5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0324bf7bf68335bc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "http_server_sg",
            "name_prefix": "",
            "owner_id": "725625542800",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "http_server_sg"
            },
            "tags_all": {
              "name": "http_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0831055345b75f5d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1775199517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f27fa81a306ae600",
            "security_group_rule_id": "sgr-09c42303d63110006",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.db_server_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1081734640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f27fa81a306ae600",
            "security_group_rule_id": "sgr-03ea0e3ad67191938",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.db_server_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-132507499",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f27fa81a306ae600",
            "security_group_rule_id": "sgr-0aaeba297bf3e2770",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.db_server_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2494309657",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0324bf7bf68335bc5",
            "security_group_rule_id": "sgr-0f8d4fce3d1787409",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2551747765",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05a9b9d224d9e63e0",
            "security_group_rule_id": "sgr-06327d8aecf9a28b6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.elb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "elb_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1889608432",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a9b9d224d9e63e0",
            "security_group_rule_id": "sgr-01db5fa18892b44be",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.elb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1340745797",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0324bf7bf68335bc5",
            "security_group_rule_id": "sgr-0d7113b4da05f407c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-4183848432",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0324bf7bf68335bc5",
            "security_group_rule_id": "sgr-03bd1c9bb21c1543f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_server_sg"
          ]
        }
      ]
    }
  ]
}